--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    aa
-</body>
+  </head>
+  <style>
+    h1 {
+      color: red;
+    }
+  </style>
+  <body>
+    <h1>稳 来 跟爷 kiss kiss</h1>
+  </body>
 </html>
