--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
     h1 {
       color: red;
     }
+    .fy {
+      font-size: 25px;
+      color: burlywood;
+    }
+    .six {
+      font-size: 20px;
+      color: blue;
+    }
   </style>
   <body>
-     <h1>稳</h1>
-     <img src="https://avatars.githubusercontent.com/u/79958280?v=4" alt="">
-     fy 太 nb 了 6666666
+    <h1>稳</h1>
+    <img src="https://avatars.githubusercontent.com/u/79958280?v=4" alt="" />
+    <br />
+    <span class="fy">fy</span> 太 nb 了 <br /><span class="six">66666</span>
+    <br />
+    稳孙小王八
   </body>
 </html>
