--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
   </head>
   <style>
+    body{
+      background-color: rgb(0, 217, 255);
+    }
     h1 {
       color: red;
     }
@@ -24,7 +27,7 @@
     <br />
     <span class="fy">fy</span> 太 nb 了 <br /><span class="six">66666</span>
     <br />
-    
+
     稳孙小王八
   </body>
 </html>
