--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       background-color: rgb(0, 217, 255);
     }
     h1 {
-      color: red;
+      color: rgb(255, 0, 234);
     }
     .fy {
       font-size: 25px;
